--- a/main.html
+++ b/main.html
@@ -11,48 +11,50 @@
 </head>
 
 <body class="bg_color">
-    <div class="nav_bar">
-        <button class="nav_button" onclick="location.href = './main.html'">
-            HOME
-        </button>
-        <button class="nav_button" onclick="location.href = './booth_timetable.html'">
-            축제안내
-        </button>
-        <button class="nav_button" onclick="location.href = './booth.html'">
-            부스안내
-        </button>
-        <button class="nav_button" onclick="location.href = './about.html'">
-            ABOUT
-        </button>
-    </div>
-    <div class="sku_festival_img">
-        <img src="./img/i_main_logo.png" width="400" height="450">
-    </div>
+    <div class="bg">
+        <div class="nav_bar">
+            <button class="nav_button" onclick="location.href = './main.html'">
+                HOME
+            </button>
+            <button class="nav_button" onclick="location.href = './booth_timetable.html'">
+                축제안내
+            </button>
+            <button class="nav_button" onclick="location.href = './booth.html'">
+                부스안내
+            </button>
+            <button class="nav_button" onclick="location.href = './about.html'">
+                ABOUT
+            </button>
+        </div>
+        <div class="sku_festival_img">
+            <img src="./img/i_main_logo.png" width="400" height="450">
+        </div>
 
-    <div class="concert">
-        <a href="./booth_timetable.html" class="concert_button">
-            <img src="./img/i_intro.png">
-            <span class="img_text">공연안내</span>
-        </a>
-    </div>
+        <div class="concert">
+            <a href="./booth_timetable.html" class="concert_button">
+                <img src="./img/i_intro.png">
+                <span class="img_text">공연안내</span>
+            </a>
+        </div>
 
-    <div class="booth">
-        <a href="./booth.html" class="booth_button">
-            <img src="./img/i_concert.png">
-            <span class="img_text">부스안내</span>
-        </a>
-    </div>
+        <div class="booth">
+            <a href="./booth.html" class="booth_button">
+                <img src="./img/i_concert.png">
+                <span class="img_text">부스안내</span>
+            </a>
+        </div>
 
-    <div class="lion">
-        <a href="./about.html" class="lion_button">
-            <img src="./img/i_lion.png">
-            <span class="img_text">만든 사람들 </span>
-            <span class="like_lion">멋쟁이사자처럼</span>
-        </a>
-    </div>
+        <div class="lion">
+            <a href="./about.html" class="lion_button">
+                <img src="./img/i_lion.png">
+                <span class="img_text">만든 사람들 </span>
+                <span class="like_lion">멋쟁이사자처럼</span>
+            </a>
+        </div>
 
-    <div class="skon_festival_color">
-        <img src="./img/i_bg_scon.png">
+        <div class="skon_festival_color">
+            <img src="./img/i_bg_scon.png">
+        </div>
     </div>
 </body>
 
