fix about, timetable

--- a/about.html
+++ b/about.html
@@ -101,6 +101,9 @@
                 <br>
             </div>
         </div>
+        <div class="skon_festival_color">
+            <img src="./img/i_booth_bg_scon.png">
+        </div>
     </div>
 </body>
 
