--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <button class="nav_button" onclick="location.href = './main.html'">
                 HOME
             </button>
-            <button class="nav_button" onclick="location.href = './booth_timetable.html'">
+            <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
                 축제안내
             </button>
             <button class="nav_button" onclick="location.href = './booth.html'">
@@ -27,9 +27,9 @@
         <div class="aboutus">
             <div class="about">
                 <p class="about_intro">
-                    <img src="./img/i_about_logo.png">
+                    <img src="./img/i_about_logo2.png">
                 <div class="p1">
-                    안녕하세요. <span style="color:navy">서경대학교 멋쟁이사자처럼</span> 입니다.
+                    안녕하세요. <span style="color:rgb(255, 255, 190)">서경대학교 멋쟁이사자처럼</span> 입니다.
                 </div>
                 <div class="p1">
                     2023년 1학기 서경대학교 대동제를 맞아
