--- a/booth.html
+++ b/booth.html
@@ -15,7 +15,7 @@
             <button class="nav_button" onclick="location.href = './main.html'">
                 HOME
             </button>
-            <button class="nav_button" onclick="location.href = './booth_timetable.html'">
+            <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
                 축제안내
             </button>
             <button class="nav_button" onclick="location.href = './booth.html'">
