--- a/booth_24timetable.html
+++ b/booth_24timetable.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/booth_timetable.css" rel="stylesheet">
+    <link href="./css/booth_24timetable.css" rel="stylesheet">
     <title>sku_festival</title>
 </head>
 
@@ -15,7 +15,7 @@
             <button class="nav_button" onclick="location.href = './main.html'">
                 HOME
             </button>
-            <button class="nav_button" onclick="location.href = './booth_timetable.html'">
+            <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
                 축제안내
             </button>
             <button class="nav_button" onclick="location.href = './booth.html'">
@@ -27,27 +27,27 @@
         </div>
 
         <div class="date_div">
-            <section class="first_day">
+            <button class="first_day" onclick="location.href = './booth_24timetable.html'">
                 <p class="first_dday">
                     수
                     <br>
                     24
                 </p>
-            </section>
-            <section class="second_day">
+            </button>
+            <button class="second_day" onclick="location.href = './booth_25timetable.html'">
                 <p class="second_dday">
                     목
                     <br>
                     25
                 </p>
-            </section>
-            <section class="third_day">
+            </button>
+            <button class="third_day" onclick="location.href = './booth_26timetable.html'">
                 <p class="third_dday">
                     금
                     <br>
                     26
                 </p>
-            </section>
+            </button>
         </div>
         <div class="booth_box">
             <div class="booth_festival">
@@ -66,10 +66,10 @@
                         <div class="real_time_table_in">
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
+                                    <img src="./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
-                                    
+
                                     <div class="list_time_name">
                                         <div class="list_time">
                                             13:00 ~ 13:30
@@ -82,7 +82,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
+                                    <img src="./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -97,7 +97,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
+                                    <img src="./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -112,7 +112,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
+                                    <img src="./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -127,7 +127,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
+                                    <img src="./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -142,7 +142,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_day.png">
+                                    <img src="./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -157,7 +157,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src="./img/i_timetable_logo_night.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -172,7 +172,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src="./img/i_timetable_logo_night.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -187,7 +187,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src="./img/i_timetable_logo_night.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -202,7 +202,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src="./img/i_timetable_logo_night.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -217,7 +217,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src="./img/i_timetable_logo_night.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
@@ -232,7 +232,7 @@
                             </div>
                             <div class="time_table_list">
                                 <div class="list_num">
-                                    <img src = "./img/i_timetable_logo_night.png">
+                                    <img src="./img/i_timetable_logo_night.png">
                                 </div>
                                 <div class="list_logo_name_box">
                                     <div class="list_time_name">
