change main -> index, about dept fix

--- a/booth.html
+++ b/booth.html
@@ -12,7 +12,7 @@
 <body>
     <div class="bg_color">
         <div class="nav_bar">
-            <button class="nav_button" onclick="location.href = './main.html'">
+            <button class="nav_button" onclick="location.href = './index.html'">
                 HOME
             </button>
             <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
