--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body class="bg_color">
     <div class="bg">
         <div class="nav_bar">
-            <button class="nav_button" onclick="location.href = './main.html'">
+            <button class="nav_button" onclick="location.href = './index.html'">
                 HOME
             </button>
-            <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
+            <button class="nav_button" onclick="location.href = './booth_timetable.html'">
                 축제안내
             </button>
             <button class="nav_button" onclick="location.href = './booth.html'">
@@ -32,14 +32,14 @@
 
         <div class="concert">
             <a href="./booth_timetable.html" class="concert_button">
-                <img src="./img/i_intro.png">
+                <img src="./img/i_scon_logo.png">
                 <span class="img_text">공연안내</span>
             </a>
         </div>
 
         <div class="booth">
             <a href="./booth.html" class="booth_button">
-                <img src="./img/i_concert.png">
+                <img src="./img/i_scon_mic_logo.png">
                 <span class="img_text">부스안내</span>
             </a>
         </div>
