--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,10 @@
     <title>About</title>
 </head>
 
-<body class = "bg_color">
+<body class="bg_color">
     <div class="bg">
         <div class="nav_bar">
-            <button class="nav_button" onclick="location.href = './main.html'">
+            <button class="nav_button" onclick="location.href = './index.html'">
                 HOME
             </button>
             <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
@@ -25,80 +26,82 @@
             </button>
         </div>
         <div class="aboutus">
-            <div class="about">
-                <p class="about_intro">
-                    <img src="./img/i_about_logo2.png">
-                <div class="p1">
-                    안녕하세요. <span style="color:rgb(255, 255, 190)">서경대학교 멋쟁이사자처럼</span> 입니다.
-                </div>
-                <div class="p1">
-                    2023년 1학기 서경대학교 대동제를 맞아
-                    <br>
-                    동아리 "멋쟁이사자처럼" 아이오갤 팀에서
-                    <br>
-                    학우분들께 보다 즐겁고 편한 축제가
-                    <br>
-                    되었으면 하는 마음에 제작을 하였습니다.
-                    <br>
+            <div class=" about_intro_box">
+                <div class="about">
+                    <p class="about_intro">
+                        <img src="./img/i_about_logo2.png">
+                    <div class="p1">
+                        안녕하세요. <span style="color:rgb(255, 255, 190)">서경대학교 멋쟁이사자처럼</span> 입니다.
+                    </div>
+                    <div class="p1">
+                        2023년 1학기 서경대학교 대동제를 맞아
+                        <br>
+                        동아리 "멋쟁이사자처럼" 아이오갤 팀에서
+                        <br>
+                        학우분들께 보다 즐겁고 편한 축제가
+                        <br>
+                        되었으면 하는 마음에 제작을 하였습니다.
+                        <br>
 
+                    </div>
+                    <div class="p1">
+                        여느때보다 즐겁고 행복한 축제가 되시기를 진심으로 소망합니다.
+                        <br>
+                        학우 여러분들의 예쁘고 찬란한 청춘을 응원합니다.
+                    </div>
+                    <div class="p1">
+                        -TEAM 아이오갤-
+                    </div>
+                    </p>
                 </div>
-                <div class="p1">
-                    여느때보다 즐겁고 행복한 축제가 되시기를 진심으로 소망합니다.
-                    <br>
-                    학우 여러분들의 예쁘고 찬란한 청춘을 응원합니다.
-                </div>
-                <div class="p1">
-                    -아이오갤 팀-
-                </div>
-                </p>
-            </div>
-            <div class="intro_us_div">
-                <p class="intro_us">
-                    <b class="intro_head">DEVELOPERS</b>
-                </p>
+                <div class="intro_us_div">
+                    <p class="intro_us">
+                        <b class="intro_head">DEVELOPERS</b>
+                    </p>
 
-                <div class="member_list">
-                    <div class="card_info_left">
-                        <img class="card_img" src="./img/i_bondi_hj.png" style="width: 100px; height: 100px;">
-                        <p class="dept"> 컴퓨터공학과 20 </p>
-                        <p class="name"> 황현진 </p>
+                    <div class="member_list">
+                        <div class="card_info_left">
+                            <img class="card_img" src="./img/i_bondi_hj.png" style="width: 100px; height: 100px;">
+                            <p class="dept"> 컴퓨터공학과 20 </p>
+                            <p class="name"> 황현진 </p>
+                        </div>
+                        <div class="card_info_right">
+                            <img class="card_img" src="./img/i_bondi_kr.png" style="width: 100px; height: 100px;">
+                            <p class="dept"> 컴퓨터공학과 20 </p>
+                            <p class="name"> 하경림 </p>
+                        </div>
                     </div>
-                    <div class="card_info_right">
-                        <img class="card_img" src="./img/i_bondi_kr.png" style="width: 100px; height: 100px;">
-                        <p class="dept"> 컴퓨터공학과 20 </p>
-                        <p class="name"> 하경림 </p>
+                    <p class="intro_us">
+                        <b class="intro_head">DESIGN / PM</b>
+                    </p>
+                    <div class="member_list">
+                        <div class="card_info_left">
+                            <img class="card_img" src="./img/i_bondi_hs.jpg" style="width: 100px; height: 100px;">
+                            <p class="dept"> 디자인학부 21 </p>
+                            <p class="name"> 장한승 </p>
+                        </div>
+                        <div class="card_info_right">
+                            <img class="card_img" src="./img/i_bondi_jm.jpg" style="width: 100px; height: 100px;">
+                            <p class="dept"> 디자인학부 21 </p>
+                            <p class="name"> 서정민 </p>
+                        </div>
                     </div>
+                    <div class="member_list">
+                        <div class="card_info_left">
+                            <img class="card_img" src="./img/i_bondi_je.png" style="width: 100px; height: 100px;">
+                            <p class="dept"> 컴퓨터공학과 21 </p>
+                            <p class="name"> 윤주은 </p>
+                        </div>
+                        <div class="card_info_right">
+                            <img class="card_img" src="./img/i_bondi_kt.png" style="width: 100px; height: 100px;">
+                            <p class="dept"> 나노화학생명공학과 19 </p>
+                            <p class="name"> 김경태 </p>
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                    <br>
                 </div>
-                <p class="intro_us">
-                    <b class="intro_head">DESIGN / PM</b>
-                </p>
-                <div class="member_list">
-                    <div class="card_info_left">
-                        <img class="card_img" src="./img/i_bondi_hs.jpg" style="width: 100px; height: 100px;">
-                        <p class="dept"> 생활문화디자인과 20 </p>
-                        <p class="name"> 장한승 </p>
-                    </div>
-                    <div class="card_info_right">
-                        <img class="card_img" src="./img/i_bondi_jm.jpg" style="width: 100px; height: 100px;">
-                        <p class="dept"> 생활문화디자인과 20 </p>
-                        <p class="name"> 서정민 </p>
-                    </div>
-                </div>
-                <div class="member_list">
-                    <div class="card_info_left">
-                        <img class="card_img" src="./img/i_bondi_je.png" style="width: 100px; height: 100px;">
-                        <p class="dept"> 컴퓨터공학과 22 </p>
-                        <p class="name"> 윤주은 </p>
-                    </div>
-                    <div class="card_info_right">
-                        <img class="card_img" src="./img/i_bondi_kt.png" style="width: 100px; height: 100px;">
-                        <p class="dept"> 나노화학생명공학과 20 </p>
-                        <p class="name"> 김경태 </p>
-                    </div>
-                </div>
-                <br>
-                <br>
-                <br>
             </div>
         </div>
         <div class="skon_festival_color">
