--- a/booth_26timetable.html
+++ b/booth_26timetable.html
@@ -12,7 +12,7 @@
 <body class="bg_color">
     <div class="bg">
         <div class="nav_bar">
-            <button class="nav_button" onclick="location.href = './main.html'">
+            <button class="nav_button" onclick="location.href = './index.html'">
                 HOME
             </button>
             <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
