--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <button class="nav_button" onclick="location.href = './booth.html'">
                 부스안내
             </button>
-            <button class="nav_button" onclick="location.href = './about.html'">
+            <button class="nav_button" onclick="location.href = './about.html'" style="border-bottom: 2px solid #ffffff;">
                 ABOUT
             </button>
         </div>
