--- a/booth.html
+++ b/booth.html
@@ -18,7 +18,7 @@
             <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
                 축제안내
             </button>
-            <button class="nav_button" onclick="location.href = './booth.html'">
+            <button class="nav_button" onclick="location.href = './booth.html'" style="border-bottom: 2px solid #ffffff;">
                 부스안내
             </button>
             <button class="nav_button" onclick="location.href = './about.html'">
