--- a/booth_25timetable.html
+++ b/booth_25timetable.html
@@ -15,7 +15,7 @@
             <button class="nav_button" onclick="location.href = './index.html'">
                 HOME
             </button>
-            <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
+            <button class="nav_button" onclick="location.href = './booth_24timetable.html'" style="border-bottom: 2px solid #ffffff;">
                 축제안내
             </button>
             <button class="nav_button" onclick="location.href = './booth.html'">
