--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body class="bg_color">
     <div class="bg">
         <div class="nav_bar">
-            <button class="nav_button" onclick="location.href = './index.html'">
+            <button class="nav_button" onclick="location.href = './index.html'" style="border-bottom: 2px solid #ffffff;">
                 HOME
             </button>
-            <button class="nav_button" onclick="location.href = './booth_timetable.html'">
+            <button class="nav_button" onclick="location.href = './booth_24timetable.html'">
                 축제안내
             </button>
             <button class="nav_button" onclick="location.href = './booth.html'">
@@ -26,37 +26,39 @@
                 ABOUT
             </button>
         </div>
-        <div class="sku_festival_img">
-            <img src="./img/i_main_logo.png" width="400" height="450">
-        </div>
-
-        <div class="concert">
-            <a href="./booth_timetable.html" class="concert_button">
-                <img src="./img/i_scon_logo.png">
-                <span class="img_text">공연안내</span>
-            </a>
-        </div>
-
-        <div class="booth">
-            <a href="./booth.html" class="booth_button">
-                <img src="./img/i_scon_mic_logo.png">
-                <span class="img_text">부스안내</span>
-            </a>
-        </div>
-
-        <div class="lion">
-            <a href="./about.html" class="lion_button">
-                <img src="./img/i_lion.png">
-                <span class="img_text">만든 사람들 </span>
-                <span class="like_lion">멋쟁이사자처럼</span>
-            </a>
-        </div>
-
-        <div class="skon_festival_color">
-            <img src="./img/i_bg_scon.png">
+        <div class="main_set">
+            <div class="sku_festival_img">
+                <img src="./img/i_main_logo_green.png" width="255" height="456">
+            </div>
+            <div class="button_set">
+                <div class="main_button">
+                    <a href="./booth_24timetable.html">
+                        <img src="./img/i_scon_logo.png">
+                    </a>
+                </div>
+                <div class="img_text">공연안내</div>
+                <div class="main_button">
+                    <a href="./booth.html">
+                        <img src="./img/i_scon_mic_logo.png">
+                    </a>
+                </div>
+                <div class="img_text">부스안내</div>
+                <div class="main_button">
+                    <a href="./about.html">
+                        <img src="./img/i_lion.png" width="110" height="110">
+                    </a>
+                </div>
+                <div class="img_text" style="margin-top: 10px;">
+                    만든 사람들
+                    <br>
+                    멋쟁이사자처럼
+                </div>
+            </div>
+            <div class="skon_festival_color">
+                <img src="./img/i_bg_scon.png" width="367" height="138">
+            </div>
         </div>
     </div>
 </body>
-
 </html>
 <!DOCTYPE html>
