--- a/booth_24timetable.html
+++ b/booth_24timetable.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./img/i_scon_mic_logo.png" rel="shortcut icon" type="image/x-icon">
     <link href="./css/booth_24timetable.css" rel="stylesheet">
     <title>sku_festival</title>
 </head>
-
 <body class="bg_color">
     <div class="bg">
         <div class="nav_bar">
@@ -25,7 +24,6 @@
                 ABOUT
             </button>
         </div>
-
         <div class="date_div">
             <button class="first_day" onclick="location.href = './booth_24timetable.html'">
                 <p class="first_dday">
@@ -69,7 +67,6 @@
                                     <img src="./img/i_timetable_logo_day.png">
                                 </div>
                                 <div class="list_logo_name_box">
-
                                     <div class="list_time_name">
                                         <div class="list_time">
                                             13:00 ~ 13:30
@@ -255,5 +252,4 @@
         </div>
     </div>
 </body>
-
 </html>
