--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 ABOUT
             </button>
         </div>
-        <div class="main_set">
+        <div class="main_set" style="background-attachment:scroll;">
             <div class="sku_festival_img">
-                <img src="./img/i_main_logo_green.png" width="255" height="456">
+                <img src="./img/i_main_logo_green.png" width="230" height="296">
             </div>
             <div class="button_set">
                 <div class="main_button">
@@ -52,9 +52,10 @@
                     <br>
                     멋쟁이사자처럼
                 </div>
-            </div>
-            <div class="skon_festival_color">
-                <img src="./img/i_bg_scon.png" width="367" height="138">
+
+                <div class="skon_festival_color">
+                    <img src="./img/i_bg_scon.png" width="367" height="138">
+                </div>
             </div>
         </div>
     </div>
