--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     멋쟁이사자처럼
                 </div>
 
-                <div class="skon_festival_color">
-                    <img src="./img/i_bg_scon.png" width="367" height="138">
+                <div class="skon_festival_color" width="367" height="138">
+                    <img src="./img/i_bg_scon.png" width="90%" height="100%">
                 </div>
             </div>
         </div>
